# CAS

./: .gitignore  README.md  tree.txt
include/: config.h.in
include/kernel/: number_tokenization.h  symbol_tokenization.h  token.h  tokenization.h  tokenizer.h
include/kernel/tokenization/: number_tokenization.h  symbol_tokenization.h
src/kernel/: number_tokenization.c  symbol_tokenization.c  token.c  tokenization.c  tokenizer.c
src/kernel/tokenization/: number_tokenization.c  symbol_tokenization.c
test/kernel/unit_test/: CMakeLists.txt  expressions.txt  test_tokenizer.c
